--- a/electron/index.css
+++ b/electron/index.css
@@ -44,19 +44,25 @@ body:hover {
     /*pointer-events: none;*/
 }
 
-#column:hover {
-}
-
 #floor {
     width: 100%;
+    max-width: 800px;
+    /*max-height: 80%;*/
+
+    padding-top: 2%;
+    padding-bottom: 2%;
 
     display: flex;
     align-items: center;
     flex-direction: column;
+
+    /*background-color: darkcyan;*/
+
+    cursor: pointer;
 }
 
 #floor:hover {
-    /*background-color: red;*/
+
 }
 
 .rowCell {
@@ -66,27 +72,59 @@ body:hover {
 }
 
 .cell {
+    position: relative;
 
     width: 12.5%;
     padding-bottom: 12.5%;
+    /*height: auto;*/
     /*background-color: white;*/
 
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 
-    background-color: #45a1f1;
+    background-color: #47a7f9;
+
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: space-around;*/
+}
+
+.signal {
+    position: absolute;
+
+    width: 10px;
+    height: 10px;
+
+    top: calc(50% - 5px);
+    left: calc(50% - 5px);
+    /*margin: auto auto;*/
+
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 0, 0, 0.1);
+}
+
+.signal.red {
+    box-shadow: 0 2px 3px rgba(239, 0, 0, 0.5);
+    background-color: rgba(254, 0, 0, 0.86);
 }
 
 .cell:hover {
-    background-color: rgba(237, 31, 11, 0.35);
+    background-color: rgba(64, 231, 52, 0.35);
 }
 
-.cell.red {
-    background-color: rgba(255, 0, 0, 0.58);
+.cell.check {
+    background-color: rgba(32, 255, 99, 0.78);
 }
 
 .cell.none {
     background-color: rgba(27, 27, 27, 0.07);
     box-shadow: none;
+}
+
+.signal {
+    /*border-radius: 10%;*/
+    /*border-bottom: 100px solid red;*/
+    /*border-left: 100px solid transparent;*/
+    /*filter: brightness(40%);*/
 }
 
 @keyframes sea {
@@ -101,4 +139,29 @@ body:hover {
     30% {background-color: #09ed38;}
     70% {background-color: rgba(71, 245, 31, 0.38);}
     100% {background-color: rgba(73, 249, 34, 0.67);}
+}
+
+#header {
+    padding-top: 20px;
+}
+
+#menu {
+    text-align: center;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    padding-bottom: 20px;
+}
+
+#menu span {
+    cursor: pointer;
+    padding: 10px;
+    font-weight: 400;
+}
+
+#menu span:hover {
+    color: red;
 }
