--- a/web/css/index.css
+++ b/web/css/index.css
@@ -160,19 +160,29 @@ main {
 
 .menu {
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 
-    padding-bottom: 20px;
+    /*padding-bottom: 30px;*/
 }
 
-.menu span {
+.menu div {
     cursor: pointer;
     padding: 10px;
+    margin: 5px;
+    background-color: white;
     font-weight: 400;
+
+    min-width: 24px;
+    border-radius: 5px;
+
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .menu span:hover {
