--- a/web/css/index.css
+++ b/web/css/index.css
@@ -160,7 +160,7 @@ main {
     background-color: rgba(255, 0, 0, 0.1);
 }
 
-.signal.red {
+.signal.on {
     box-shadow: 0 2px 3px rgba(28, 68, 239, 0.5);
     background-color: rgba(25, 32, 254, 0.86);
 }
