--- a/web/css/index.css
+++ b/web/css/index.css
@@ -71,10 +71,10 @@ main {
 }
 
 #floor {
-    border-top: solid forestgreen 3px;
-    border-right: solid #3a7eff 3px;
-    border-bottom: solid yellow 3px;
-    border-left: solid red 3px;
+    border-top: solid forestgreen 5px;
+    border-right: solid #3a7eff 5px;
+    border-bottom: solid yellow 5px;
+    border-left: solid red 5px;
 }
 
 #siren {
@@ -97,22 +97,20 @@ main {
     font-size: 48px;
 }
 
-#siren div.white {
-    background-color: white;
+.team-first {
+    background-color: green !important;
 }
 
-#siren div.blue {
-    background-color: #3a7eff;
+.team-second {
+    background-color: #3a7eff !important;
 }
 
-#siren div.black {
-    color: white;
-    background-color: black;
+.team-third {
+    background-color: yellow !important;
 }
 
-#siren div.red {
-    color: white;
-    background-color: red;
+.team-forth {
+    background-color: red !important;
 }
 
 #siren div:hover {
@@ -138,7 +136,6 @@ main {
     /*background-color: white;*/
 
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
-
     background-color: #41e041;
 
     /*display: flex;*/
@@ -178,26 +175,6 @@ main {
     box-shadow: none;
 }
 
-.signal {
-    /*border-radius: 10%;*/
-    /*border-bottom: 100px solid red;*/
-    /*border-left: 100px solid transparent;*/
-    /*filter: brightness(40%);*/
-}
-
-@keyframes sea {
-    0% {background-color: #45a1f1;}
-    30% {background-color: #337ab4;}
-    70% {background-color: #45a5f5;}
-    100% {background-color: #47a7f9;}
-}
-
-@keyframes green {
-    0% {background-color: rgba(18, 187, 13, 0.52);}
-    30% {background-color: #09ed38;}
-    70% {background-color: rgba(71, 245, 31, 0.38);}
-    100% {background-color: rgba(73, 249, 34, 0.67);}
-}
 
 #header {
     padding-top: 20px;
