--- a/web/css/index.css
+++ b/web/css/index.css
@@ -85,7 +85,9 @@ main {
     flex-direction: row;
 }
 
-#siren div {
+#siren > div {
+    position: relative;
+
     width: 25%;
     height: 100%;
 
@@ -95,6 +97,20 @@ main {
     text-align: center;
 
     font-size: 48px;
+
+    z-index: 1;
+}
+
+#siren > div > div {
+    padding: 20px;
+    /*margin: 20px;*/
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    left: 20px;
+    background-color: ghostwhite;
+
+    z-index: 2;
 }
 
 .team-first {
