--- a/web/css/index.css
+++ b/web/css/index.css
@@ -101,8 +101,20 @@ main {
     z-index: 1;
 }
 
-#siren > div > div {
-    padding: 20px;
+#siren div.siren {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    width: 100%;
+    height: 100%;
+    /*background-color: wheat;*/
+    /*height: 100%;*/
+}
+
+#siren div.sirenx {
+    padding: 20px 0;
     /*margin: 20px;*/
     position: absolute;
     bottom: 20px;
@@ -110,6 +122,8 @@ main {
     left: 20px;
     background-color: ghostwhite;
 
+    font-size: 30px;
+    text-align: center;
     z-index: 2;
 }
 
